# rust-apply-string-args

./: Cargo.toml
src/: lib.rs
