[package]
name = "apply-string-args"
version = "1.0.1"
edition = "2021"
authors = ["matheusdiasdesouzads <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/matheusdiasdesouzads/rust-apply-string-args"
license = "ISC"
description = "Format string arguments."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy-regex = "2.3.1"
regex = "1.7.0"